--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,3 @@
-MONGO_URL="mongodb+srv://ghettoboujee:September21@cluster0.vsdoc70.mongodb.net/?retryWrites=true&w=majority"
+MONGO_URL="mongodb+srv://ghettoboujee:September21@cluster0.7g0564m.mongodb.net/?retryWrites=true&w=majority"
 PORT=3001
+JWT_SECRET="ghettoboujee"
